TKSS-274: Support KeyTool with ShangMi algorithms